[project]
name = "tagihan-wifi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.4.1",
    "fastapi>=0.121.0",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.11.0",
    "sqids>=0.5.2",
    "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
    "autoimport>=1.6.1",
    "icecream>=2.1.8",
    "isort>=7.0.0",
]
